libs/extractor/src/snapshots/extractor__tests__props_direct_object_select-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={{a:1, b:0.5, ...any}[\"b\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "({a:1,b:.5,...any})[`b`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment59) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment59?.[0] ?? \"\"}`} style={{ ...__devupAssignment59?.[1] }} />)(((__devupValue) => [\n\t\"OHbve8xu8durd0pm2o\",\n\t{ \"---SUHdgkffaz1bz6whzkg-a6\": __devupValue },\n\t__devupValue\n])({\n\ta: 1,\n\tb: .5,\n\t...any\n}[\"b\"]));\n",
}
