libs/extractor/src/snapshots/extractor__tests__props_direct_select-12.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.js\",\nr#\"import {Center} from '@devup-ui/core'\n<Center bg={SOME_VAR[idx]}>\n          </Center>\n        \"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap()"
---
ExtractOutput {
    styles: [
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                basic: true,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "justifyContent",
                value: "center",
                level: 0,
                selector: None,
                basic: true,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "alignItems",
                value: "center",
                level: 0,
                selector: None,
                basic: true,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "SOME_VAR[idx]",
                selector: None,
            },
        ),
    ],
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"d0 d1 d2 d3\" style={{ \"--d4\": SOME_VAR[idx] }}>\n          </div>;\n",
}
