libs/extractor/src/snapshots/extractor__tests__props_direct_select-7.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.js\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={{a:1, b:0.5}[a]} />\n        \"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap()"
---
ExtractOutput {
    styles: [
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                basic: true,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "({\n\ta: 1,\n\tb: .5\n})[a]",
                selector: None,
            },
        ),
    ],
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"d0 d1\" style={{ \"--d2\": ({\n\ta: 1,\n\tb: .5\n})[a] }} />;\n",
}
